--- a/src/livedatatester/LiveDataUI.form
+++ b/src/livedatatester/LiveDataUI.form
@@ -117,17 +117,23 @@
                 <Component class="javax.swing.JTable" name="tblRealtimeBars">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="6" rowCount="4">
-                        <Column editable="false" title="Date/Time" type="java.lang.String"/>
+                      <Table columnCount="7" rowCount="100">
+                        <Column editable="false" title="Now" type="java.lang.String"/>
+                        <Column editable="false" title="Bar Time" type="java.lang.String"/>
                         <Column editable="false" title="Open" type="java.lang.String"/>
                         <Column editable="false" title="High" type="java.lang.String"/>
                         <Column editable="false" title="Low" type="java.lang.String"/>
                         <Column editable="false" title="Close" type="java.lang.String"/>
-                        <Column editable="false" title="Volume" type="java.lang.Object"/>
+                        <Column editable="false" title="Volume" type="java.lang.String"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                           <Title/>
                           <Editor/>
@@ -196,8 +202,9 @@
                 <Component class="javax.swing.JTable" name="tblStreaming">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="6" rowCount="4">
-                        <Column editable="false" title="Date/Time" type="java.lang.String"/>
+                      <Table columnCount="7" rowCount="100">
+                        <Column editable="false" title="Now" type="java.lang.String"/>
+                        <Column editable="false" title="Bar Time" type="java.lang.String"/>
                         <Column editable="false" title="Open" type="java.lang.String"/>
                         <Column editable="false" title="High" type="java.lang.String"/>
                         <Column editable="false" title="Low" type="java.lang.String"/>
@@ -207,6 +214,11 @@
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                           <Title/>
                           <Editor/>
